--- a/app/views/accountancy/accounts.html.haml
+++ b/app/views/accountancy/accounts.html.haml
@@ -2,7 +2,7 @@
   -link :account_create
 
 .search
-  - form_tag(:action=>:accounts, :prefix=>params[:prefix]) do
+  =form_tag(:action=>:accounts, :prefix=>params[:prefix]) do
     %table
       %tr
         %td
