--- a/app/views/accountancy/bank_statement_point.html.haml
+++ b/app/views/accountancy/bank_statement_point.html.haml
@@ -3,7 +3,7 @@
 =evalue(@bank_statement, :started_on)
 =evalue(@bank_statement, :stopped_on)
 %h2=tc(:entries_to_point)
--form_tag do
+=form_tag do
   %table.dyta
     %tr
       %th
