--- a/app/views/company/configure.html.haml
+++ b/app/views/company/configure.html.haml
@@ -1,4 +1,4 @@
--form_tag(nil, {:class=>"vbox flex", :style=>'overflow:none'}) do
+=form_tag(nil, {:class=>"vbox flex", :style=>'overflow:none'}) do
   .fields.flex
     -if @my_company.parameters.find(:all, :conditions=>["record_value_type = 'Sequence' AND record_value_id IS NULL"]).size > 0
       =toolbar do
