--- a/app/views/management/_products_search.html.haml
+++ b/app/views/management/_products_search.html.haml
@@ -1,5 +1,5 @@
 .search
-  - form_tag(:action=>:products) do
+  =form_tag(:action=>:products) do
     %table
       %tr
         %td.label=tc(:search)
