--- a/app/views/management/purchase_order_lines.html.haml
+++ b/app/views/management/purchase_order_lines.html.haml
@@ -31,7 +31,7 @@
 
 .end
 
-- form_tag do
+=form_tag do
   .actions
     =link_to tg(:previous), :action=>:purchase_orders
     - unless @purchase_order.shipped
