--- a/app/views/management/unvalidated_embankments.html.haml
+++ b/app/views/management/unvalidated_embankments.html.haml
@@ -1,5 +1,5 @@
 - if @embankments.size > 0
-  - form_tag do
+  =form_tag do
     =dyta :unvalidated_embankments
     .actions
       =link_to tg(:previous), :action=>:index
