--- a/app/views/resources/_employees_search.html.haml
+++ b/app/views/resources/_employees_search.html.haml
@@ -1,5 +1,5 @@
 .search
-  - form_tag(:action=>:employees) do
+  =form_tag(:action=>:employees) do
     %table
       %tr
         %td.label=tc(:search)
