--- a/app/views/accountancy/draft_entries.html.haml
+++ b/app/views/accountancy/draft_entries.html.haml
@@ -1,4 +1,4 @@
--form_tag(nil, {:class=>"vbox flex", :style=>'overflow:none'}) do
+=form_tag(nil, {:class=>"vbox flex", :style=>'overflow:none'}) do
   .fields.flex
     =journals_tag
     .search=render :partial=>"journals_search"
