--- a/app/views/accountancy/financialyear_close.html.haml
+++ b/app/views/accountancy/financialyear_close.html.haml
@@ -1,8 +1,8 @@
--form_tag do
+=form_tag do
   =formalize do |f|
     -f.error :financialyear
     -f.title :title
-    -f.field Financialyear.human_name, @financialyear.code
+    -f.field Financialyear.model_name.human, @financialyear.code
     -f.field :financialyear, :stopped_on, :choices => @financialyear.closures.collect{|d| [I18n.localize(d), d]} 
     -f.title :use_renew
     -f.field tc(:select_renew_journal), select_tag("journal_id", options_for_select([[tc("dont_use_journal"), ""], [tc("create_journal"), 0]]+@current_company.journals.collect{|j| [j.name, j.id]}, :selected=>params[:journal_id]))
