--- a/app/views/accountancy/general_ledger.html.haml
+++ b/app/views/accountancy/general_ledger.html.haml
@@ -1,5 +1,5 @@
 -max = @current_company.accounts.calculate(:max, "LENGTH(COALESCE(number, ''))").to_i
--form_tag({}, :method=>:get) do
+=form_tag({}, :method=>:get) do
   .search
     %table
       %tr 
