--- a/app/views/company/_listing_node_column_label.html.haml
+++ b/app/views/company/_listing_node_column_label.html.haml
@@ -1,5 +1,5 @@
 -listing_node = listing_node_column_label
--form_remote_tag(:url=>{:action=>:listing_node_update, :id=>listing_node.id, :type=>"column_label"}, :update=>"#{listing_node.key}_label", :loading=>"onLoading()", :loaded=>"onLoaded();") do
+=form_remote_tag(:url=>{:action=>:listing_node_update, :id=>listing_node.id, :type=>"column_label"}, :update=>"#{listing_node.key}_label", :loading=>"onLoading()", :loaded=>"onLoaded();") do
   =link_to_function(listing_node.label, "this.hide(); var tf = $('#{listing_node.key}_label_tf'); tf.show(); tf.select(); tf.focus();", :id=>"#{listing_node.key}_label_lb")
   =text_field_tag("label", listing_node.label, :size=>listing_node.label.size, :id=>listing_node.key+"_label_tf", :style=>'display: none;', :onblur=>"$('#{listing_node.key}_label_lb').show(); this.hide();")
   %span.attribute="("+listing_node.name+")"
