--- a/app/views/management/_sale_order_line_row_form.html.haml
+++ b/app/views/management/_sale_order_line_row_form.html.haml
@@ -1,7 +1,7 @@
 -price_id = nil
 %fieldset.quick-add
   %legend=tc('title')
-  -form_tag(:action=>:sale_order_line_create) do 
+  =form_tag(:action=>:sale_order_line_create) do 
     =formalize do |f|
       -price_id = f.field :sale_order_line, :price_id, :choices=>:available_prices
     #detail-row=render :partial=>"sale_order_line_detail_row_form"
