--- a/app/views/management/inventory_update.html.haml
+++ b/app/views/management/inventory_update.html.haml
@@ -1,4 +1,4 @@
--form_tag() do
+=form_tag() do
   =formalize do |f|
     - f.title :inventory
     - f.field :inventory, :responsible_id, :choices=>{:reflection=>:users}
