--- a/app/views/management/sale_orders.html.haml
+++ b/app/views/management/sale_orders.html.haml
@@ -1,7 +1,7 @@
 =toolbar do 
   -link :unpaid_sale_orders_export
 .search
-  - form_tag do
+  =form_tag do
     %table
       %tr
         %td.label=tc('search_sales')
