--- a/app/views/management/_product_form.html.haml
+++ b/app/views/management/_product_form.html.haml
@@ -28,7 +28,7 @@
   -f.field :product, :for_productions
   -f.field :product, :manage_stocks
 =formalize(:id=>:product_form_stocks) do |f|
-  -f.title :stocks
+  -f.title :stocks_parameters
   -f.field :stock, :quantity_min
   -f.field :stock, :critic_quantity_min
   -f.field :stock, :quantity_max
