--- a/app/views/management/embankment.html.haml
+++ b/app/views/management/embankment.html.haml
@@ -14,7 +14,7 @@
     %th=tc(:payments_count, :mode=>@embankment.mode.name)
     %td=@embankment.payments_count 
   %tr.total.important
-    %th=tc(:amount)
+    %th=tc(:total)
     %td=@embankment.amount.to_s+" "+@embankment.cash.currency.code
 
 
