--- a/app/views/management/tracking.html.haml
+++ b/app/views/management/tracking.html.haml
@@ -20,5 +20,5 @@
   =dyta :tracking_operation_lines
 
 -if @tracking.sale_order_lines.size > 0
-  %h2=tc(:sales)
+  %h2=tc(:sale_orders)
   =dyta :tracking_sale_order_lines
