--- a/app/views/production/_operation_form.html.haml
+++ b/app/views/production/_operation_form.html.haml
@@ -14,7 +14,7 @@
   %tr
     %td{:valign=>:top}
       = formalize do |f|
-        - f.title :products
+        - f.title :operation_lines
       =hidden_field_tag "operation[target_type]", Shape.name
       %table.dyta
         %thead
