--- a/app/views/production/tool.html.haml
+++ b/app/views/production/tool.html.haml
@@ -10,5 +10,5 @@
       =evalue @tool, :remaining_duration, :duration=>:minutes
       
 
-%h2=tc(:operations, :count=>@tool.uses.count)
+%h2=tc(:x_operations, :count=>@tool.uses.count)
 =dyta(:tool_operations)
