--- a/app/views/relations/entity_category.html.haml
+++ b/app/views/relations/entity_category.html.haml
@@ -8,7 +8,7 @@
       =evalue @entity_category, :by_default
       =evalue @entity_category, :description
     
-%h2=tc :prices, :count=>@category_prices_count
+%h2=tc :x_prices, :count=>@category_prices_count
 =toolbar do
   -link :price_create, {:controller=>:management, :mode=>:sales}
 =dyta :category_prices
