--- a/app/views/accountancy/document_print.html.haml
+++ b/app/views/accountancy/document_print.html.haml
@@ -10,9 +10,9 @@
 
 =form_tag do
   %fieldset
-    %legend=tc(:export)
+    %legend=tc(:exportation)
     =formalize do |f|
-      -f.title tc(:balance)
+      -f.title tc(:accounting_balance)
       -f.field tg(:from), date_field_tag("started_on", @current_company.current_financialyear.started_on)
       -f.field tg(:to),   date_field_tag("stopped_on", @current_company.current_financialyear.stopped_on)
     .actions=submit_tag tg(:export), :name=>:export
