--- a/app/views/accountancy/index.html.haml
+++ b/app/views/accountancy/index.html.haml
@@ -3,5 +3,5 @@
   %ul
     =li_link_to tc(:nb_entries, :count=>@current_company.journal_entries.count), :action=>:journals
 
-%h2=tc :journals
+%h2=tl :journals
 =journals_tag
