--- a/app/views/accountancy/journal_reopen.html.haml
+++ b/app/views/accountancy/journal_reopen.html.haml
@@ -4,5 +4,5 @@
     - f.title :select_closure_date
     - f.field :journal, :closed_on, :choices => @journal.reopenings.collect{|d| [::I18n.l(d), d]}
   .actions
-    =submit_tag(tc(:reopen))
+    =submit_tag(tc(:reopen_journal))
     =link_to_back(:label=>:cancel)
