--- a/app/views/company/index.html.haml
+++ b/app/views/company/index.html.haml
@@ -4,13 +4,13 @@
   %h2= tg('indicator')
   %ul
     =li_link_to tc('nb_entities',:count=>@current_company.entities.size), :controller=>:relations, :action=>:entities
-    =# li_link_to tc('nb_sales', :count=>@deliveries.size), :controller=>:management, :action=>:undelivered_sales
+    =# li_link_to tc('nb_waiting_deliveries', :count=>@deliveries.size), :controller=>:management, :action=>:undelivered_sales
     =# li_link_to tc('nb_purchases', :count=>@purchases.size), :controller=>:management, :action=>:unreceived_purchases
 
 .menu
   %h2=tc(:modules)
   %ul
     -for controller in menus[1..-1].collect{|x| x[:name]}
-      =li_link_to tc(controller), :controller=>controller, :action=>:index
+      =li_link_to t("actions.#{controller}.index"), :controller=>controller, :action=>:index
 
 =svg_test_tag
