--- a/app/views/relations/entities_import.html.haml
+++ b/app/views/relations/entities_import.html.haml
@@ -2,8 +2,8 @@
   .fields.flex
     -if @step == :upload
       =formalize do |f|
-        -f.title :upload
-        -f.field tc('upload'), file_field_tag(:upload)
+        -f.title :select_file_to_upload
+        -f.field tc(:file_to_upload), file_field_tag(:upload)
         -#f.field tc('first_line_as_title'), check_box_tag(:first_line_as_title)
         -f.field tc('file_nature'), select_tag(:nature, options_for_select(@formats))
     -elsif @step == :columns
