--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! XML utf-8
 =doctype_tag
 
-%html{:xmlns=>"http://www.w3.org/1999/xhtml"}
+%html{:xmlns=>"http://www.w3.org/1999/xhtml", :dir=>t("about.dir"), :lang=>t("about.iso2"), "xml:lang"=>t("about.iso2")}
   %head
     %link{:rel=>"icon", :type=>"image/png", :href=>image_path("favicon.png")}
     =title_tag
